    to Samba. Wake On LAN settings and the ability to - basically - switch
    off remounting have been added. Further improvements were implemented.
  + Renamed all classes that represent a page in the configuration dialog.
  + Added security modes 'ntlmssp' and 'ntlmsspi' for mount.cifs used with
    Linux kernel >= 3.8.
- ... and more ...
    
Smb4K 1.0.9 (2013-11-03):
- With non-English languages the change introduced in version 1.0.8 
  might not work correctly, because e.g. umlauts are not recognized and
  the shell output is truncated. Setting the language to "en_US.UTF-8"
  fixes this problem.

Smb4K 1.0.8 (2013-10-19):
- Explicity set language to "C" in Smb4KProcess, because Samba might be
  localized (closes SF ticket #34).
    
Smb4K 1.0.7 (2013-05-13):
- Fixed remounting of shares.
- Fixed Smb4KCustomOptionsManager::hasCustomOptions(). The default options
  defined via the configuration dialog are honored now.
- Fixed "Ignoring unknown parameter" error messages (closes SF ticket #29).
- Fixed command line argument when a master browser is queried for the 
  browse list.

Smb4K 1.0.6 (2013-03-03):
- Fixed crash in Smb4KMounter::slotAuthError() due to signals being emitted
  from Smb4KMountJob::slotActionFinished() too often (closes SF ticket #25).
- Fixed unmounting of selected shares. Thanks go to Ettore Atalan for 
  reporting this issue.
- Removed faulty and useless clean-up code from read function of
  Smb4KCustomOptionsManager.

Smb4K 1.0.5 (2012-12-26):
- Fixed hanging of Smb4K if a custom mount prefix without a trailing
  slash was entered (closes SF ticket #28). Thanks go to Ettore Atalan
  for reporting this issue and PhobosK for the patch.

Smb4K 1.0.4 (2012-08-19):
- Fixed erroneously shown error notifications when searching. Thanks to
  Alexander Willand for reporting this issue.
- Make sure that "tdb_log" messages are not shown as error notifications
  to the user.
- Wait until unmounting all shares on exit finished before closing down.